--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="assets/logo.png" />
+    <link rel="icon" type="image/svg+xml" href="/container-diet/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Primary Meta Tags -->
@@ -36,11 +36,11 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="Container Diet" />
-    <link rel="apple-touch-icon" href="assets/logo.png" />
+    <link rel="apple-touch-icon" href="/container-diet/logo.svg" />
 
     <!-- Microsoft / Windows -->
     <meta name="msapplication-TileColor" content="#007acc" />
-    <meta name="msapplication-TileImage" content="assets/logo.png" />
+    <meta name="msapplication-TileImage" content="/container-diet/logo.svg" />
     <meta name="theme-color" content="#007acc" />
 
     <!-- Structured Data -->
